Enhance font rendering and routing configuration
- Added font preloading and rendering optimizations in index.html and globals.css for improved performance and visual quality.
- Introduced a new vercel.json file for routing, replacing the deleted _redirects file to streamline deployment configurations.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sabuho</title>
     <meta name="description" content="Master any subject through interactive quizzes and comprehensive learning tools" />
+    
+    <!-- Preload font for better rendering -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Varela+Round:wght@400&display=swap" as="style" />
   </head>
   <body>
     <div id="root"></div>
